--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,26 @@ jobs:
       - run: echo 'export PYTHONPATH={$HOME}:/circleci-python'
       - run: python -m pip install -r requirements.txt
 
+  testing:
+    working_directory: ~/circleci-python
+    docker:
+      - image: circleci/python:3.8
+    steps:
+      - checkout
+      - run: echo 'export PYTHONPATH={$HOME}:/circleci-python'
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install -r requirements.txt
+      - run: pytest test/test_main.py
+
 
 workflows:
   just_build:
     jobs:
       - build
+
+  build_testing:
+    jobs:
+      - build
+      - testing:
+          requires:
+            - build
