--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - checkout
       - run: python -c "import sys; print(sys.executable)"
-      - run: echo 'export PYTHONPATH={$HOME}:/circleci-python'
+      - run: echo 'export PYTHONPATH=/circleci-python'
       - run: python -m pip install -r requirements.txt
 
   testing:
@@ -17,7 +17,7 @@ jobs:
       - image: circleci/python:3.8
     steps:
       - checkout
-      - run: echo 'export PYTHONPATH={$HOME}:/circleci-python'
+      - run: echo 'export PYTHONPATH=/circleci-python'
       - run: python -m pip install --upgrade pip
       - run: python -m pip install -r requirements.txt
       - run: pytest test/test_main.py
