--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - image: circleci/python:3.8
     steps:
       - checkout
-      - run: echo 'export PYTHONPATH="~/circleci-python"' >> $BASH_ENV
+      - run: echo 'export PYTHONPATH="{$HOME}:/circleci-python"' >> $BASH_ENV
       - run: python -m pip install --upgrade pip
       - run: python -m pip install -r requirements.txt
       - run: pytest test/test_main.py
