--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,5 @@
 version: 2.1
 
-orbs:
-  codecov: codecov/codecov@3
-
 jobs:
   build:
     working_directory: ~/circleci-python
@@ -23,8 +20,7 @@ jobs:
       - run: echo 'export PYTHONPATH="${PYTHONPATH}:{HOME}:/circleci-python"' >> $BASH_ENV
       - run: python -m pip install --upgrade pip
       - run: python -m pip install -r requirements.txt
-      - run: pytest -vvv --cov code/
-      - codecov/upload
+      - run: pytest test/test_main.py
 
 
 workflows:
